letter spacing fix

--- a/src/sass/Header.sass
+++ b/src/sass/Header.sass
@@ -8,4 +8,5 @@ header
         position: relative
         font-family: 'Exo 2', Verdana, Geneva, sans-serif
         letter-spacing: 15px
+        margin-left: 15px
         text-align: center
